--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -1,12 +1,35 @@
 {
   "LoopTimes": 15,
   "Serilog": {
+    "Using": [],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Information",
+        "Microsoft": "Warning",
         "System": "Warning"
       }
-    }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\temp\\Logs\\BetterConsoleApp\\log.txt",
+          "fileSizeLimitBytes": "1000000",
+          "rollOnFileSizeLimit": "true",
+          "outputTemplate": "{Timestamp:G} [{Level:u4}] ({ThreadId}) {Message}{NewLine}{Exception:1}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\temp\\Logs\\BetterConsoleApp\\log.json",
+          "fileSizeLimitBytes": "1000000",
+          "rollOnFileSizeLimit": "true",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }
+    ]
   }
 }
